--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 
 <body>
     <main>
-        <canvas width="800" height="400"></canvas>
+        <canvas></canvas>
         <div id="controls">
+
             <section>
-                <button id="playButton" data-playing="no"></button>
+                <audio controls></audio>
+            </section>
+
+            <section>
                 <button id="fsButton">Full Screen</button>
 
                 <label>Track:
@@ -26,14 +30,6 @@
             </section>
 
             <section>
-                Volume: <input type="range" id="volumeSlider" min="0" max="2" value="1" step="0.01">
-                <span id="volumeLabel">???</span>
-            </section>
-
-            <section>
-                <span><input type="checkbox" id="gradientCB" checked><label for="gradientCB">Show Gradient</label></span>
-                <span><input type="checkbox" id="barsCB" checked><label for="barsCB">Show Bars</label></span>
-                <span><input type="checkbox" id="circlesCB" checked><label for="circlesCB">Show Circles</label></span>
                 <span><input type="checkbox" id="noiseCB"><label for="noiseCB">Show Noise</label></span>
                 <span><input type="checkbox" id="invertCB"><label for="invertCB">Invert Colors</label></span>
                 <span><input type="checkbox" id="embossCB"><label for="embossCB">Show Emboss</label></span>
