Updated fetch urls to reverbs

--- a/index.html
+++ b/index.html
@@ -128,23 +128,23 @@
 
                         <label for="smallRoomRB">
                             <input type="radio" name="reverbRBs" id="smallRoomRB"
-                                value="media/reverbs/Nice Drum Room.wav">
+                                value="./media/reverbs/Nice Drum Room.wav">
                             Small Room
                         </label>
 
                         <label for="garageRB">
-                            <input type="radio" name="reverbRBs" id="garageRB" value="media/reverbs/Parking Garage.wav">
+                            <input type="radio" name="reverbRBs" id="garageRB" value="./media/reverbs/Parking Garage.wav">
                             Parking Garage
                         </label>
 
                         <label for="largeHallReverbRB">
                             <input type="radio" name="reverbRBs" id="largeHallReverbRB"
-                                value="media/reverbs/Large Long Echo Hall.wav">
+                                value="./media/reverbs/Large Long Echo Hall.wav">
                             Large Hall
                         </label>
 
                         <label for="starRB">
-                            <input type="radio" name="reverbRBs" id="starRB" value="media/reverbs/On a Star.wav">
+                            <input type="radio" name="reverbRBs" id="starRB" value="./media/reverbs/On a Star.wav">
                             On a Star
                         </label>
                     </span>
